# BenchmarkReliability

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MERGE_TO_MAIN.md  README.md  README_CN.md  RESULTS_SUMMARY.md  USAGE.md  demo.py  find_collaborator.py  pyproject.toml  requirements.txt  research_buddy.py  sample_data.py  setup.py  test_fallback.py  test_mock.py  合并完成说明.md  运行截图.txt  运行结果.md  问题回答.md
paper/: paper.bib  paper.md
src/brf/: __init__.py  analyzer.py  cli.py
src/brf/metrics/: instability.py  metadata.py  null_test.py
src/brf/phase/: __init__.py  embedding.py  visualization.py
src/brf/registry/sources/: assistments.py  college_scorecard.py  colleges_aaup.py  colleges_usnews.py  entrance_exam.py  higher_ed.py  law_school.py  mathe.py  mm_tba.py  oli.py  oulad.py  pisa2015.py  student_depression.py  student_dropout.py  students_exam_scores.py  tae.py  turkiye.py  uci_student.py  uci_student_math.py  xapi_edu.py
src/brf/report/: __init__.py  json_export.py  latex_export.py
tests/: test_analyzer.py  test_metrics.py  test_phase.py
